profilelist1exp/unpackaged/objects/Approval_Request__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Request Submitted</fullName>
                </value>
                <value>
                    <fullName>Approval Request Updated</fullName>
                </value>
                <value>
                    <fullName>Approval Request Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actions_Available__c</fullName>
        <formula>IF( 
OR( 
ISPICKVAL(Approval_Status__c, &apos;Submitted&apos;), 
ISPICKVAL(Approval_Status__c, &apos;Rejected&apos;)
), 
HYPERLINK(&apos;/apex/ApprovalRequestMaintenance?appReqId=&apos; &amp;  Id &amp; &apos;&amp;action=recallEntire&apos; , &apos;Cancel Approval Request&apos; ,&apos;_parent&apos;) &amp; &apos; &apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actions Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Approver__c</fullName>
        <formula>IF( 
AND( 
NOT(ISPICKVAL(Approval_Status__c , &apos;Cancelled&apos;)), 
NOT(ISPICKVAL(Approval_Status__c , &apos;Approved&apos;)), 
NOT(ISPICKVAL(Approval_Status__c , &apos;Closed as Rejected&apos;)) 
), 
HYPERLINK(&apos;/apex/ApprovalRequestAddApprover?appReqId=&apos; &amp; Id, &apos;Add Approver&apos; ,&apos;_parent&apos;) &amp; &apos; &apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;#fff&quot;&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Request_Type__c</fullName>
        <label>Approval Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DGR Qualify Gate Approval</fullName>
                </value>
                <value>
                    <fullName>DGR Propose Gate Approval</fullName>
                </value>
                <value>
                    <fullName>DGR Contract Gate Approval</fullName>
                </value>
                <value>
                    <fullName>Technical Certification Tier 1</fullName>
                </value>
                <value>
                    <fullName>Technical Certification Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed as Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Approver_s__c</fullName>
        <label>Assigned Approver(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Book_Date__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Book Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_as_Rejected__c</fullName>
        <description>To be used by DGR&amp; Product Admin user, and Services Intake Manager/DGC permission set user to close and reject the entire DGR approval request</description>
        <formula>IF(
OR(
ISPICKVAL(Approval_Status__c, &apos;Submitted&apos;), 
ISPICKVAL(Approval_Status__c, &apos;Rejected&apos;)
), 
HYPERLINK(&apos;/apex/ApprovalRequestClosedAsRejected?appReqId=&apos; &amp; Id, &apos;Close as Rejected&apos; ,&apos;_parent&apos;) &amp; &apos; &apos;,
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;#fff&quot;&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DGR_Level__c</fullName>
        <formula>TEXT(Opportunity__r.DGR_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DGR Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGR_Territories__c</fullName>
        <label>DGR Territories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Governance_Review_Level__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Deal Governance Review Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <formula>Opportunity__r.Deal_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Region_s__c</fullName>
        <label>Delivery Region(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_Defined_LOB__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Infrastructure &amp; Cloud Computing&quot;), &quot;Infrastructure &amp; Cloud Computing; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Applications&quot;), &quot;Applications; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;BPO (Business Process Outsourcing)&quot;), &quot;BPO (Business Process Outsourcing); &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Security&quot;), &quot;Security; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot;Support &amp; Deployment&quot;), &quot;Support &amp; Deployment; &quot;,&quot;&quot;) &amp;

IF(INCLUDES(Opportunity__r.Dell_Defined_LOB__c,&quot; Services LOB unavailable for offer(s)&quot;), &quot;Services LOB unavailable for offer(s); &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Services LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Services_Industry__c</fullName>
        <formula>Text( Opportunity__r.Dell_Defined_Industry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Services Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance_Repository_Link2__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Governance Repository Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Governance_Repository_Link__c</fullName>
        <formula>IF(false, HYPERLINK(&apos;&apos;, &apos;Click Here&apos;, &apos;_blank&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Governance Repository Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiation_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Initiation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Parent_Name__c</fullName>
        <formula>Opportunity__r.Regional_Parent_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Comments__c</fullName>
        <description>Created for 16.03 SOM. Comments field for Services Governance Approval Requests.</description>
        <inlineHelpText>These Request Comments are sent to Approver(s) on the DGR Approval Request Notification email.  This includes any request that is RESENT or REASSIGNED.  Please edit Request Comments when appropriate.</inlineHelpText>
        <label>Request Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <formula>Opportunity__r.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Area_s__c</fullName>
        <label>Service Area (s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset &amp; Configuration Management</fullName>
                </value>
                <value>
                    <fullName>Field Services</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Service Desk</fullName>
                </value>
                <value>
                    <fullName>Service Management</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
                <value>
                    <fullName>Auto &amp; Monitoring</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>Capacity Plan/ISIS</fullName>
                </value>
                <value>
                    <fullName>Data Center</fullName>
                </value>
                <value>
                    <fullName>Database Admin</fullName>
                </value>
                <value>
                    <fullName>Desktop Engineering</fullName>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                </value>
                <value>
                    <fullName>Mainframe</fullName>
                </value>
                <value>
                    <fullName>iSeries (AS400)</fullName>
                </value>
                <value>
                    <fullName>Messaging</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Platform Hosting Windows</fullName>
                </value>
                <value>
                    <fullName>Platform Hosting UNIX</fullName>
                </value>
                <value>
                    <fullName>Service Desk Voice</fullName>
                </value>
                <value>
                    <fullName>Service Management Tools</fullName>
                </value>
                <value>
                    <fullName>ITDS Service Assurance</fullName>
                </value>
                <value>
                    <fullName>Storage Systems</fullName>
                </value>
                <value>
                    <fullName>Storage Backup</fullName>
                </value>
                <value>
                    <fullName>System Management Tools</fullName>
                </value>
                <value>
                    <fullName>HCLS Cloud</fullName>
                </value>
                <value>
                    <fullName>Private Cloud</fullName>
                </value>
                <value>
                    <fullName>vCloud</fullName>
                </value>
                <value>
                    <fullName>vDaas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner1__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Services Sales Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Top_Opportunity__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Services Top Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Architect_Name__c</fullName>
        <formula>Owner__r.FirstName +&apos; &apos;+ Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Architect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage2__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Certification_Link__c</fullName>
        <label>Technical Certification Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tier_1_Approval_Date__c</fullName>
        <label>Tier 1 TC Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tier_1_Approval_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tier 1 TC ID</label>
        <referenceTo>Approval_Request__c</referenceTo>
        <relationshipLabel>Services Governance Approval Requests</relationshipLabel>
        <relationshipName>Services_Governance_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_1_Approval_Status__c</fullName>
        <formula>TEXT( Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier 1 Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_TC_Date_Initiated__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Tier 1 TC Date Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tier_2_Approval_Date__c</fullName>
        <label>Tier 2 TC Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tier_2_Approval_Status__c</fullName>
        <label>Tier 2 Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_TC_Date_Initiated__c</fullName>
        <label>Tier 2 TC Date Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Approver_Approved__c</fullName>
        <label>Total Approver(s) Approved</label>
        <summaryFilterItems>
            <field>Approver__c.Approver_Status__c</field>
            <operation>contains</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Approver__c.Approval_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approver_Recalled__c</fullName>
        <label>Total Approver(s) Cancelled</label>
        <summaryFilterItems>
            <field>Approver__c.Approver_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Approver__c.Approval_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approver_Rejected__c</fullName>
        <label>Total Approver(s) Rejected</label>
        <summaryFilterItems>
            <field>Approver__c.Approver_Status__c</field>
            <operation>contains</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>Approver__c.Approval_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Approver__c</fullName>
        <label>Total Approver(s) Requested</label>
        <summaryFilterItems>
            <field>Approver__c.Approver_Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Approver__c.Approval_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Total Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Unweighted_Rev_Services_Only__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Unweighted Rev – Services Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unweighted_Rev__c</fullName>
        <description>SOM R14.10 - populate with values from Opportunity when Services Governance Approval Request is submitted</description>
        <label>Unweighted Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Services Governance Approval Request</label>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Approval Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services Governance Approval Requests</pluralLabel>
    <recordTypes>
        <fullName>DGR</fullName>
        <active>true</active>
        <description>R14.10 - Page layout for &quot;DGR Qualify Gate Approval&quot;, &quot;DGR Propose Gate Approval&quot; and &quot;DGR Contract Gate Approval&quot;</description>
        <label>DGR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tech_Cert</fullName>
        <active>true</active>
        <description>SOM R14.10 - Page layout for Technical Certification Tier 1 and Technical Certification Tier 2</description>
        <label>Tech Cert</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>